@@ -1,6 +1,8 @@
 2005-09-10 Philippe April  <philippe@ilesansfil.org>
 	* signup.php: Fixed bug in detecting is the user is already part of the
 	network.
+	* classes/{Authenticator,Network,Node}.php: isset, and issues preventing
+	users from logging out.
 
 2005-09-10 Francois Proulx <francois.proulx@gmail.com>
 	* Automatically redirect user to login form when trying to access admin
